--- a/03.md
+++ b/03.md
@@ -2,10 +2,16 @@
 # DV_0.3
 
 Aquí están todas las notas y versiones de la DV_0.3
-## 0.3.25T (03-0Z-26-73)
-- Retoques al Silent Spikiki y accesibilidad a su modo desde el inventario interactuando con los fragmentos horribles
 
-- https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-26-73.zip
+## 0.3.25T
+
+* 03-0Z-27-74
+    - Leves retoques al menú y nueva forma de accesibilidad del modo silen spikiki
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-27-74.zip
+
+* 03-0Z-26-73
+    - Retoques al Silent Spikiki y accesibilidad a su modo desde el inventario interactuando con los fragmentos horribles
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-26-73.zip
 
 ### 0.3.24T
 * 03-0Y-25-72
