--- a/03.md
+++ b/03.md
@@ -5,6 +5,15 @@ Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.25T
 
+* 03-0Z-28-75 (20/11/22)
+    - Solución de Bugs relacionados al "avisador"
+    - Solución de textos no traducidos
+    - Cambio en los multiplicadores de konocoins
+    - Se añaden konocoins adicionales al ganar
+    - se reduce la dificultad para conseguir las piezas de los personajes
+    
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-28-75.zip
+
 * 03-0Z-27-74 (20/11/22)
     - Leves retoques al menú y nueva forma de accesibilidad del modo silen spikiki
     - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-27-74.zip
