--- a/03.md
+++ b/03.md
@@ -10,7 +10,8 @@ Aquí están todas las notas y versiones de la DV_0.3
     - Solución de textos no traducidos
     - Cambio en los multiplicadores de konocoins
     - Se añaden konocoins adicionales al ganar
-    - se reduce la dificultad para conseguir las piezas de los personajes
+    - Se reduce la dificultad para conseguir las piezas de los personajes
+    - Cambio de algunos comandos
     
     - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-28-75.zip
 
