--- a/03.md
+++ b/03.md
@@ -3,8 +3,13 @@
 
 Aquí están todas las notas y versiones de la DV_0.3
 
-## 0.3.26T (25/11/22)
-* 03-0AA-29-76
+## 0.3.26T
+* 03-0AA-30-77 (28/11/22)
+    - Solución bug crítico del archivo de guardado
+    
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-30-77.zip
+
+* 03-0AA-29-76 (25/11/22)
     - Se añade el menú de perfil
     
     - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0Z-29-76.zip
