--- a/03.md
+++ b/03.md
@@ -4,10 +4,15 @@
 Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.26T
+* 03-0AA-30-78 (28/11/22)
+    - Solución bug no interacción
+    
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-78.zip
+
 * 03-0AA-30-77 (28/11/22)
     - Solución bug crítico del archivo de guardado
     
-    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-77.zip
+    - (no link disponible)
 
 * 03-0AA-29-76 (25/11/22)
     - Se añade el menú de perfil
