--- a/03.md
+++ b/03.md
@@ -4,6 +4,11 @@
 Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.26T
+* 03-0AA-30-79 (30/11/22)
+    - Solución bug archivos de guardados "atrasados"
+    - Solución bugs visuales en el menú
+
+    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-79.zip
 * 03-0AA-30-78 (28/11/22)
     - Solución bug no interacción
     
