--- a/03.md
+++ b/03.md
@@ -4,11 +4,19 @@
 Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.26T
-* 03-0AA-30-79 (30/11/22)
-    - Solución bug archivos de guardados "atrasados"
-    - Solución bugs visuales en el menú
+* 03-0AA-30-79 Win:(30/11/22) And:(5/12/22)
+    #### Cambios Globales
+        - Solución bug archivos de guardados "atrasados"
+        - Solución bugs visuales en el menú
+    #### Cambios Android
+        - Creación del joystick virtual
 
-    - https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-79.zip
+    #### Windows
+        https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-79.zip
+    #### Android
+        https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-30-79a.apk
+
+
 * 03-0AA-30-78 (28/11/22)
     - Solución bug no interacción
     
