--- a/03.md
+++ b/03.md
@@ -4,6 +4,14 @@
 Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.26T
+
+* 03-0AA-30-79 Win:(20/12/22)
+    #### Cambios Globales
+        - Botón de cambio de nombre en el perfil
+        - Solución de bug de guardado
+
+    #### Windows
+        https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-31-80.zip
 * 03-0AA-30-79 Win:(30/11/22) And:(5/12/22)
     #### Cambios Globales
         - Solución bug archivos de guardados "atrasados"
