--- a/03.md
+++ b/03.md
@@ -5,7 +5,14 @@ Aquí están todas las notas y versiones de la DV_0.3
 
 ## 0.3.26T
 
-* 03-0AA-30-79 Win:(20/12/22)
+* 03-1A-32-81 Win:(24/12/22)
+    #### Cambios Globales
+        - Se ha agregado un nuevo modo: infinity game
+        
+
+    #### Windows
+        https://github.com/MagincianCompany/DVVersions/raw/main/All%20Versions/03-0AA-31-80.zip
+* 03-0AA-31-80 Win:(20/12/22)
     #### Cambios Globales
         - Botón de cambio de nombre en el perfil
         - Solución de bug de guardado
